--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <div class="col-sm-3 col-md-3">
                     <h3>Categories</h3>
                     <div class="bar">
-                        <input type="text" class="form-control" placeholder="Search applets" ng-model="searchString" />
+                        <input type="search" class="form-control" placeholder="Search applets" ng-model="searchString" ng-keyup="searchApplets()" />
                     </div>
                     <br />
                     <div class="list-group categories">
-                        <a href="" ng-repeat="category in categories | filter:searchString" class="list-group-item list-group-item-action" 
+                        <a href="" ng-repeat="category in categories" class="list-group-item list-group-item-action" 
                             ng-class="{active : activeCategory === category}" ng-click="showApplets(category)">
                             <span class="badge">{{category.value}}</span>
                             {{category.category}}
